k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensetracker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expensetracker
  template:
    metadata:
      labels:
        app: expensetracker
    spec:
      containers:
        - name: expensetracker-container
          image: expensetracker:latest
          ports:
            - containerPort: 3000
