k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expensetracker-service
spec:
  selector:
    app: expensetracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
